# msn-pecan

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.mingw  README  README.win32  TODO  challenge.c  cmdproc.c  cmdproc.h  cmdproc_private.h  command.c  command.h  command_private.h  directconn.c  directconn.h  error.c  error.h  fix-purple.c  fix-purple.h  fix_purple.c  fix_purple.h  fix_purple_win32.h  get-version  get-version.sh  group.h  history.c  history.h  httpconn.c  httpconn.h  installer.nsi  internal.h  msg.c  msg.h  msg_private.h  msn-config.h  msn-io.c  msn-utils.c  msn-utils.h  (+94 more)
ab/: group.c  group.h  group_priv.h  group_private.h  pecan_contact.c  pecan_contact.h  pecan_contact_priv.h  pecan_contactlist.c  pecan_contactlist.h  pecan_contactlist_priv.h  pecan_group.c  pecan_group.h  pecan_group_priv.h  pn_contact.c  pn_contact.h  pn_contact_priv.h  pn_contactlist.c  pn_contactlist.h  pn_contactlist_priv.h  pn_group.c  pn_group.h  user.c  user.h  user_priv.h  user_private.h  userlist.c  userlist.h  userlist_priv.h  userlist_private.h
adium/: Makefile.am
cmd/: cmdproc.c  cmdproc.h  cmdproc_private.h  command.c  command.h  command_private.h  history.c  history.h  msg.c  msg.h  msg_private.h  table.c  table.h  table_private.h  transaction.c  transaction.h  transaction_private.h
compat/: glib.c  glib.h
cvr/: pecan_slp_object.c  pecan_slp_object.h  pecan_slp_object_private.h  pn_direct_conn.c  pn_direct_conn.h  pn_msnobj.c  pn_msnobj.h  pn_peer_call.c  pn_peer_call.h  pn_peer_call_priv.h  pn_peer_link.c  pn_peer_link.h  pn_peer_link_priv.h  pn_peer_msg.c  pn_peer_msg.h  pn_peer_msg_priv.h  pn_sip.c  pn_sip.h  slp.c  slp.h  slpcall.c  slpcall.h  slplink.c  slplink.h  slpmsg.c  slpmsg.h  slpsession.c  slpsession.h  xfer.c  xfer.h
doc/: Doxyfile  p2p-design.txt
ext/: swfobject.h
ext/libmspack/: cab.h  cabd.c  lzxd.c  mspack.h  mszipd.c  qtmd.c  system.c  system.h
fix_purple/glib/: gstdio.h
io/: buffer.c  buffer.h  cmd.c  cmd.h  cmd_conn.c  cmd_conn.h  cmd_conn_private.h  conn.c  conn.h  conn_end.c  conn_end.h  conn_end_http.c  conn_end_http.h  conn_private.h  http_conn.c  http_conn.h  http_conn_private.h  pecan_buffer.c  pecan_buffer.h  pecan_cmd_server.c  pecan_cmd_server.h  pecan_cmd_server_priv.h  pecan_http_server.c  pecan_http_server.h  pecan_http_server_priv.h  pecan_node.c  pecan_node.h  pecan_node_priv.h  pecan_parser.c  pecan_parser.h  pecan_parser_priv.h  pecan_socket.c  pecan_socket.h  pecan_ssl_conn.c  pecan_ssl_conn.h  pecan_ssl_conn_priv.h  pecan_stream.c  pecan_stream.h  pn_buffer.c  pn_buffer.h  (+17 more)
libpurple/: xfer.c  xfer.h
po/: ar.po  da.po  de.po  eo.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  libmsn-pecan-ar.po  libmsn-pecan-da.po  libmsn-pecan-de.po  libmsn-pecan-es.po  libmsn-pecan-fi.po  libmsn-pecan-fr.po  libmsn-pecan-hu.po  libmsn-pecan-it.po  libmsn-pecan-nb.po  libmsn-pecan-nl.po  libmsn-pecan-pt.po  libmsn-pecan-pt_BR.po  libmsn-pecan-ru.po  libmsn-pecan-sr.po  libmsn-pecan-sv.po  libmsn-pecan-tr.po  libmsn-pecan-zh_CN.po  libmsn-pecan-zh_TW.po  nb.po  nl.po  oc.po  pt.po  pt_BR.po  ru.po  sr.po  sv.po  tr.po  zh_CN.po  zh_TW.po
tests/: .gitignore  Makefile  ab.c  buffer.c  cmd_parser.c  parse.c  parser.c  printf.c  util.c
utils/: msgpluslive.c  msgpluslive.h  siren7_decoder.c
win32/: README  installer.nsi  resource.rc
